--- a/myhockeyapp/views/team_stats_shutouts.pug
+++ b/myhockeyapp/views/team_stats_shutouts.pug
@@ -99,7 +99,7 @@ block scripts
     
     script(type="text/javascript").
         $(document).ready(function() {
-            $('#datatable-outs').DataTable({
+            $('#datatable-shutouts').DataTable({
                 "responsive": true,
                 "bPaginate": true,
                 "bJQueryUI": true,
