--- a/myhockeyapp/views/team_stats_penalties.pug
+++ b/myhockeyapp/views/team_stats_penalties.pug
@@ -69,7 +69,7 @@ block content
                                         td #{penalty.time}
                                         td #{penalty.offense}
                                         td #{penalty.min}
-                                        td #{penalty.player}
+                                        td #{penalty.penalty}
                                         td #{penalty.off}
                                         td #{penalty.on}
 
@@ -112,11 +112,17 @@ block scripts
                 "columnDefs": [
                     {
                         "visible": false,
-                        "targets": 0 
+                        "targets": [0],
+                        "orderData": [0, 1] 
+                    },
+                    {
+                        "targets": [1],
+                        "orderData": [1, 1] 
+                    },
+                    {
+                        "targets": [2],
+                        "orderData": [2, 0] 
                     }
-                ],
-                "order": [
-                    [0,'desc']
                 ],
                 "drawCallback": function(settings) {
                     var api = this.api();
