--- a/myhockeyapp/views/team_stats_penalties.pug
+++ b/myhockeyapp/views/team_stats_penalties.pug
@@ -112,16 +112,7 @@ block scripts
                 "columnDefs": [
                     {
                         "visible": false,
-                        "targets": [0],
-                        "orderData": [0, 1] 
-                    },
-                    {
-                        "targets": [1],
-                        "orderData": [1, 1] 
-                    },
-                    {
-                        "targets": [2],
-                        "orderData": [2, 0] 
+                        "targets": [0]
                     }
                 ],
                 "drawCallback": function(settings) {
