minor ui changes

--- a/myhockeyapp/views/team_stats_goals_against.pug
+++ b/myhockeyapp/views/team_stats_goals_against.pug
@@ -44,7 +44,7 @@ block content
                         | Goals Against
     div.row
         div.col-lg-12
-            div.panel.panel-default
+            div.panel.panel-danger
                 div.panel-heading
                     | Goals Against
                 div.panel-body
