--- a/myhockeyapp/views/team_stats_goals_for.pug
+++ b/myhockeyapp/views/team_stats_goals_for.pug
@@ -44,7 +44,7 @@ block content
                         | Goals For
     div.row
         div.col-lg-12
-            div.panel.panel-default
+            div.panel.panel-success
                 div.panel-heading
                     | Goals For
                 div.panel-body
