--- a/myhockeyapp/views/team_stats_penalties.pug
+++ b/myhockeyapp/views/team_stats_penalties.pug
@@ -44,7 +44,7 @@ block content
                         | Penalties
     div.row
         div.col-lg-12
-            div.panel.panel-default
+            div.panel.panel-warning
                 div.panel-heading
                     | Penalties
                 div.panel-body
