--- a/myhockeyapp/views/index.pug
+++ b/myhockeyapp/views/index.pug
@@ -29,7 +29,7 @@ block content
                         | Dashboard
     div.row
         div.col-lg-3.col-md-6
-            div.panel.panel-green
+            div.panel.panel-success
                 div.panel-heading
                     div.row
                         div.col-xs-3
@@ -47,7 +47,7 @@ block content
                             i.fa.fa-arrow-circle-right
                         div.clearfix            
         div.col-lg-3.col-md-6
-            div.panel.panel-green
+            div.panel.panel-success
                 div.panel-heading
                     div.row
                         div.col-xs-3
@@ -65,7 +65,7 @@ block content
                             i.fa.fa-arrow-circle-right
                         div.clearfix            
         div.col-lg-3.col-md-6
-            div.panel.panel-red
+            div.panel.panel-danger
                 div.panel-heading
                     div.row
                         div.col-xs-3
@@ -83,7 +83,7 @@ block content
                             i.fa.fa-arrow-circle-right
                         div.clearfix            
         div.col-lg-3.col-md-6
-            div.panel.panel-info
+            div.panel.panel-default
                 div.panel-heading
                     div.row
                         div.col-xs-3
@@ -102,7 +102,7 @@ block content
                         div.clearfix            
     div.row
         div.col-lg-3.col-md-6
-            div.panel.panel-green
+            div.panel.panel-success
                 div.panel-heading
                     div.row
                         div.col-xs-3
@@ -119,7 +119,7 @@ block content
                             i.fa.fa-arrow-circle-right
                         div.clearfix            
         div.col-lg-3.col-md-6
-            div.panel.panel-red
+            div.panel.panel-danger
                 div.panel-heading
                     div.row
                         div.col-xs-3
@@ -136,7 +136,7 @@ block content
                             i.fa.fa-arrow-circle-right
                         div.clearfix            
         div.col-lg-3.col-md-6
-            div.panel.panel-yellow
+            div.panel.panel-warning
                 div.panel-heading
                     div.row
                         div.col-xs-3
@@ -153,7 +153,7 @@ block content
                             i.fa.fa-arrow-circle-right
                         div.clearfix            
         div.col-lg-3.col-md-6
-            div.panel.panel-yellow
+            div.panel.panel-warning
                 div.panel-heading
                     div.row
                         div.col-xs-3
@@ -173,9 +173,9 @@ block content
 
     div.row
         div.col-lg-3.col-md-6
-            div.panel.panel-default
+            div.panel.panel-info
                 div.panel-heading
-                    |Top Goals
+                        |Top Goals
                 div.panel-body
                     div.dataTable_wrapper
                         table#datatable-goalleaders.table.table-bordered.table-hover.table-striped
@@ -188,59 +188,8 @@ block content
                                     tr
                                         td #{leader[0]}
                                         td #{leader[1]}
-        
         div.col-lg-3.col-md-6
-            div.panel.panel-default
-                div.panel-heading
-                    |Top PowerPlay Goals
-                div.panel-body
-                    div.dataTable_wrapper
-                        table#datatable-ppgleaders.table.table-bordered.table-hover.table-striped
-                            thead
-                                tr
-                                    th Player #
-                                    th Goals
-                            tbody
-                                each leader in dashboard.ppg_leaders
-                                    tr
-                                        td #{leader[0]}
-                                        td #{leader[2]}
-        div.col-lg-3.col-md-6
-            div.panel.panel-default
-                div.panel-heading
-                    |Top ShortHand Goals
-                div.panel-body
-                    div.dataTable_wrapper
-                        table#datatable-shgleaders.table.table-bordered.table-hover.table-striped
-                            thead
-                                tr
-                                    th Player #
-                                    th Goals
-                            tbody
-                                each leader in dashboard.shg_leaders
-                                    tr
-                                        td #{leader[0]}
-                                        td #{leader[3]}
-        div.col-lg-3.col-md-6
-            div.panel.panel-default
-                div.panel-heading
-                    |Top EmptyNet Goals
-                div.panel-body
-                    div.dataTable_wrapper
-                        table#datatable-engleaders.table.table-bordered.table-hover.table-striped
-                            thead
-                                tr
-                                    th Player #
-                                    th Goals
-                            tbody
-                                each leader in dashboard.eng_leaders
-                                    tr
-                                        td #{leader[0]}
-                                        td #{leader[4]}                                                                                        
-
-    div.row        
-        div.col-lg-3.col-md-6
-            div.panel.panel-default
+            div.panel.panel-info
                 div.panel-heading
                     |Top Assists
                 div.panel-body
@@ -257,7 +206,7 @@ block content
                                         td #{leader[5]}
                 
         div.col-lg-3.col-md-6
-            div.panel.panel-default
+            div.panel.panel-info
                 div.panel-heading
                     |Top Total Points
                 div.panel-body
@@ -274,7 +223,7 @@ block content
                                         td #{leader[6]}
                 
         div.col-lg-3.col-md-6
-            div.panel.panel-default
+            div.panel.panel-info
                 div.panel-heading
                     |Top Penalty In Minutes
                 div.panel-body
@@ -288,7 +237,57 @@ block content
                                 each leader in dashboard.pim_leaders
                                     tr
                                         td #{leader[0]}
-                                        td #{leader[7]}
+                                        td #{leader[7]}                                        
+
+    div.row                
+        div.col-lg-3.col-md-6
+            div.panel.panel-info
+                div.panel-heading
+                    |Top PowerPlay Goals
+                div.panel-body
+                    div.dataTable_wrapper
+                        table#datatable-ppgleaders.table.table-bordered.table-hover.table-striped
+                            thead
+                                tr
+                                    th Player #
+                                    th Goals
+                            tbody
+                                each leader in dashboard.ppg_leaders
+                                    tr
+                                        td #{leader[0]}
+                                        td #{leader[2]}
+        div.col-lg-3.col-md-6
+            div.panel.panel-info
+                div.panel-heading
+                    |Top ShortHand Goals
+                div.panel-body
+                    div.dataTable_wrapper
+                        table#datatable-shgleaders.table.table-bordered.table-hover.table-striped
+                            thead
+                                tr
+                                    th Player #
+                                    th Goals
+                            tbody
+                                each leader in dashboard.shg_leaders
+                                    tr
+                                        td #{leader[0]}
+                                        td #{leader[3]}
+        div.col-lg-3.col-md-6
+            div.panel.panel-info
+                div.panel-heading
+                    |Top EmptyNet Goals
+                div.panel-body
+                    div.dataTable_wrapper
+                        table#datatable-engleaders.table.table-bordered.table-hover.table-striped
+                            thead
+                                tr
+                                    th Player #
+                                    th Goals
+                            tbody
+                                each leader in dashboard.eng_leaders
+                                    tr
+                                        td #{leader[0]}
+                                        td #{leader[4]}                                                                                        
         //- div.col-lg-3.col-md-6
         //-     div.panel.panel-default
         //-         div.panel-heading
