--- a/myhockeyapp/views/team_stats_losses.pug
+++ b/myhockeyapp/views/team_stats_losses.pug
@@ -44,7 +44,7 @@ block content
                         | Losses
     div.row
         div.col-lg-12
-            div.panel.panel-default
+            div.panel.panel-danger
                 div.panel-heading
                     | Losses
                 div.panel-body
