--- a/myhockeyapp/views/team_stats_shutouts.pug
+++ b/myhockeyapp/views/team_stats_shutouts.pug
@@ -44,7 +44,7 @@ block content
                         | Shutouts
     div.row
         div.col-lg-12
-            div.panel.panel-default
+            div.panel.panel-success
                 div.panel-heading
                     | Shutouts
                 div.panel-body
