--- a/myhockeyapp/views/messages.pug
+++ b/myhockeyapp/views/messages.pug
@@ -1,7 +1,5 @@
 if flash
-    div.alert(class='#{flash.type}')
-        ul
-        -  for (var i = 0; i < flash.messages.length; i++) {
-                li #{flash.messages[i].msg}
-        -  }
-        ul 
+  div.alert(class='#{flash.type}')
+    ul
+      each msg in flash.messages
+        li #{flash.messages[i].msg}
