comment out the tabs

--- a/myhockeyapp/views/team_stats.pug
+++ b/myhockeyapp/views/team_stats.pug
@@ -43,11 +43,11 @@ block content
                         | Team Stats
     div.row
         div.col-lg-12    
-            ul.nav.nav-tabs(role="tablist")
-                li.active(role="presentation")
-                    a(href="#graph" role="tab" data-toggle="tab") Graph
-                li(role="presentation")
-                    a(href="#data" role="tab" data-toggle="tab") Data                        
+            //- ul.nav.nav-tabs(role="tablist")
+            //-     li.active(role="presentation")
+            //-         a(href="#graph" role="tab" data-toggle="tab") Graph
+            //-     li(role="presentation")
+            //-         a(href="#data" role="tab" data-toggle="tab") Data                        
             div.tab-content
                 div#graph.tab-pane.active(role="tabpanel")
                     div.row
